--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,4 +7,6 @@
       <input [(ngModel)]="hero.name" placeholder="name"/>
     </label>
   </div>
-</div>>
+</div>
+
+<button (click)="goBack()">Go Back</button>
