dog years calculation alert window

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -9,7 +9,8 @@
   </div>
   <div>
     <span>Age: </span>{{hero.age}} years old
-    <button (click)="addYear()">Add a year</button>
+    <span><button (click)="addYear()">Add a year</button></span>
+    <button (click)="calculateDogYears()">Dog years</button>
   </div>
 </div>
 
